# sidex

./: cabal.project  shell.nix  sidex.cabal
src/: Sidex.hs
